--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1763,26 +1763,26 @@ body {
 .cid-rzHmhKDChg H3 {
   color: #d93f1d;
 }
-.cid-rzHsGW2S7C {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #efefef;
+.cid-rFbEl7e6kK {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
 }
-.cid-rzHsGW2S7C .mbr-slider .carousel-control {
+.cid-rFbEl7e6kK .mbr-slider .carousel-control {
   background: #1b1b1b;
 }
-.cid-rzHsGW2S7C .mbr-slider .carousel-control-prev {
+.cid-rFbEl7e6kK .mbr-slider .carousel-control-prev {
   left: 0;
   margin-left: 2.5rem;
 }
-.cid-rzHsGW2S7C .mbr-slider .carousel-control-next {
+.cid-rFbEl7e6kK .mbr-slider .carousel-control-next {
   right: 0;
   margin-right: 2.5rem;
 }
-.cid-rzHsGW2S7C .mbr-slider .modal-body .close {
+.cid-rFbEl7e6kK .mbr-slider .modal-body .close {
   background: #1b1b1b;
 }
-.cid-rzHsGW2S7C .mbr-gallery-item > div::before {
+.cid-rFbEl7e6kK .mbr-gallery-item > div::before {
   content: '';
   position: absolute;
   left: 0;
@@ -1793,15 +1793,15 @@ body {
   opacity: 0;
   -webkit-transition: 0.2s opacity ease-in-out;
   transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #d93f1d) !important;
+  background: linear-gradient(to left, #554346, #45505b) !important;
 }
-.cid-rzHsGW2S7C .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+.cid-rFbEl7e6kK .mbr-gallery-item > div:hover .mbr-gallery-title::before {
   background: transparent !important;
 }
-.cid-rzHsGW2S7C .mbr-gallery-item > div:hover:before {
-  opacity: 0.2 !important;
+.cid-rFbEl7e6kK .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
 }
-.cid-rzHsGW2S7C .mbr-gallery-title {
+.cid-rFbEl7e6kK .mbr-gallery-title {
   font-size: .9em;
   position: absolute;
   display: block;
@@ -1811,7 +1811,7 @@ body {
   color: #fff;
   z-index: 2;
 }
-.cid-rzHsGW2S7C .mbr-gallery-title:before {
+.cid-rFbEl7e6kK .mbr-gallery-title:before {
   content: " ";
   width: 100%;
   height: 100%;
@@ -1820,10 +1820,10 @@ body {
   z-index: -1;
   position: absolute;
   background: #554346 !important;
-  opacity: 0.2;
+  opacity: 0.7;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #d93f1d) !important;
+  background: linear-gradient(to left, #554346, #45505b) !important;
 }
 .cid-rzHPILNLCS {
   padding-top: 90px;
