--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1752,6 +1752,284 @@ body {
   font-size: 96px;
   color: #149dcc;
 }
+.cid-rFbGgImckM {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
+}
+.cid-rFbGgImckM .content-slider {
+  display: -webkit-flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-rFbGgImckM .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-rFbGgImckM .modal-body .close span {
+  font-style: normal;
+}
+.cid-rFbGgImckM .carousel-inner > .active,
+.cid-rFbGgImckM .carousel-inner > .next,
+.cid-rFbGgImckM .carousel-inner > .prev {
+  display: -webkit-flex;
+}
+.cid-rFbGgImckM .carousel-control .icon-next,
+.cid-rFbGgImckM .carousel-control .icon-prev {
+  margin-top: -18px;
+  font-size: 40px;
+  line-height: 27px;
+}
+.cid-rFbGgImckM .carousel-control:hover {
+  background: #1b1b1b;
+  color: #fff;
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rFbGgImckM .container .carousel-control {
+    margin-bottom: 0;
+  }
+  .cid-rFbGgImckM .content-slider-wrap {
+    width: 100%!important;
+  }
+}
+.cid-rFbGgImckM .boxed-slider {
+  position: relative;
+  padding: 93px 0;
+}
+.cid-rFbGgImckM .boxed-slider > div {
+  position: relative;
+}
+.cid-rFbGgImckM .container img {
+  width: 100%;
+}
+.cid-rFbGgImckM .container img + .row {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  transform: translateY(-50%);
+  z-index: 2;
+}
+.cid-rFbGgImckM .mbr-section {
+  padding: 0;
+  background-attachment: scroll;
+}
+.cid-rFbGgImckM .mbr-table-cell {
+  padding: 0;
+}
+.cid-rFbGgImckM .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+.cid-rFbGgImckM .carousel-caption {
+  top: 50%;
+  right: 0;
+  bottom: auto;
+  left: 0;
+  display: -webkit-flex;
+  align-items: center;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  -webkit-align-items: center;
+}
+.cid-rFbGgImckM .mbr-overlay {
+  z-index: 1;
+}
+.cid-rFbGgImckM .container-slide.container {
+  width: 100%;
+  min-height: 100vh;
+  padding: 0;
+}
+.cid-rFbGgImckM .carousel-item {
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  -o-transition: -o-transform 0.6s ease-in-out;
+  -webkit-transition: -webkit-transform 0.6s ease-in-out;
+  transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out, -o-transform 0.6s ease-in-out;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-perspective: 1000px;
+  perspective: 1000px;
+}
+@media (max-width: 576px) {
+  .cid-rFbGgImckM .carousel-item .container {
+    width: 100%;
+  }
+}
+.cid-rFbGgImckM .carousel-item-next.carousel-item-left,
+.cid-rFbGgImckM .carousel-item-prev.carousel-item-right {
+  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+}
+.cid-rFbGgImckM .active.carousel-item-right,
+.cid-rFbGgImckM .carousel-item-next {
+  -webkit-transform: translate3d(100%, 0, 0);
+  transform: translate3d(100%, 0, 0);
+}
+.cid-rFbGgImckM .active.carousel-item-left,
+.cid-rFbGgImckM .carousel-item-prev {
+  -webkit-transform: translate3d(-100%, 0, 0);
+  transform: translate3d(-100%, 0, 0);
+}
+.cid-rFbGgImckM .mbr-slider .carousel-control {
+  top: 50%;
+  width: 50px;
+  height: 50px;
+  margin-top: -1.5rem;
+  font-size: 35px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  transition: all .3s;
+}
+.cid-rFbGgImckM .mbr-slider .carousel-control.carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-rFbGgImckM .mbr-slider .carousel-control.carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-rFbGgImckM .mbr-slider .carousel-control .mbr-iconfont {
+  font-size: 1.5rem;
+}
+@media (max-width: 767px) {
+  .cid-rFbGgImckM .mbr-slider .carousel-control {
+    top: auto;
+    bottom: 1rem;
+  }
+}
+.cid-rFbGgImckM .mbr-slider .carousel-indicators {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 1.5rem !important;
+}
+.cid-rFbGgImckM .mbr-slider .carousel-indicators li {
+  max-width: 15px;
+  height: 15px;
+  width: 15px;
+  max-height: 15px;
+  margin: 3px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid #fff;
+  border-radius: 50%;
+  opacity: .5;
+  transition: all .3s;
+}
+.cid-rFbGgImckM .mbr-slider .carousel-indicators li.active,
+.cid-rFbGgImckM .mbr-slider .carousel-indicators li:hover {
+  opacity: .9;
+}
+.cid-rFbGgImckM .mbr-slider .carousel-indicators li::after,
+.cid-rFbGgImckM .mbr-slider .carousel-indicators li::before {
+  content: none;
+}
+.cid-rFbGgImckM .mbr-slider .carousel-indicators.ie-fix {
+  left: 50%;
+  display: block;
+  width: 60%;
+  margin-left: -30%;
+  text-align: center;
+}
+@media (max-width: 576px) {
+  .cid-rFbGgImckM .mbr-slider .carousel-indicators {
+    display: none !important;
+  }
+}
+.cid-rFbGgImckM .mbr-slider > .container img {
+  width: 100%;
+}
+.cid-rFbGgImckM .mbr-slider > .container img + .row {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  left: 0;
+  z-index: 2;
+  -moz-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+.cid-rFbGgImckM .mbr-slider > .container .carousel-indicators {
+  margin-bottom: 3px;
+}
+@media (max-width: 576px) {
+  .cid-rFbGgImckM .mbr-slider > .container .carousel-control {
+    margin-bottom: 0;
+  }
+}
+.cid-rFbGgImckM .mbr-slider .mbr-section {
+  padding: 0;
+  background-attachment: scroll;
+}
+.cid-rFbGgImckM .mbr-slider .mbr-table-cell {
+  padding: 0;
+}
+.cid-rFbGgImckM .carousel-item .container.container-slide {
+  position: initial;
+  width: auto;
+  min-height: 0;
+}
+.cid-rFbGgImckM .full-screen .slider-fullscreen-image {
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+}
+.cid-rFbGgImckM .full-screen .slider-fullscreen-image.active {
+  display: -o-flex;
+}
+.cid-rFbGgImckM .full-screen .container {
+  width: auto;
+  padding-right: 0;
+  padding-left: 0;
+}
+.cid-rFbGgImckM .full-screen .carousel-item .container.container-slide {
+  width: 100%;
+  min-height: 100vh;
+  padding: 0;
+}
+.cid-rFbGgImckM .full-screen .carousel-item .container.container-slide img {
+  display: none;
+}
+.cid-rFbGgImckM .mbr-background-video-preview {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.cid-rFbGgImckM .mbr-overlay ~ .container-slide {
+  z-index: auto;
+}
+.cid-rFbGgImckM .mbr-slider.slide .container {
+  overflow: hidden;
+  padding: 0;
+}
+.cid-rFbGgImckM .carousel-inner {
+  height: 100%;
+}
+.cid-rFbGgImckM .slider-fullscreen-image {
+  height: 100%;
+  background: transparent !important;
+}
+.cid-rFbGgImckM .image_wrapper {
+  height: 400px;
+  width: 100%;
+  position: relative;
+  display: inline-block;
+}
+.cid-rFbGgImckM .image_wrapper img {
+  width: auto !important;
+  height: 100%;
+}
+.cid-rFbGgImckM .carousel-item .container-slide {
+  text-align: center;
+}
+.cid-rFbGgImckM .content-slider-wrap {
+  width: 60%;
+}
 .cid-rzHmhKDChg {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -1762,68 +2040,6 @@ body {
 }
 .cid-rzHmhKDChg H3 {
   color: #d93f1d;
-}
-.cid-rFbEl7e6kK {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-rFbEl7e6kK .mbr-slider .carousel-control {
-  background: #1b1b1b;
-}
-.cid-rFbEl7e6kK .mbr-slider .carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-rFbEl7e6kK .mbr-slider .carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-rFbEl7e6kK .mbr-slider .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-rFbEl7e6kK .mbr-gallery-item > div::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #554346;
-  opacity: 0;
-  -webkit-transition: 0.2s opacity ease-in-out;
-  transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-}
-.cid-rFbEl7e6kK .mbr-gallery-item > div:hover .mbr-gallery-title::before {
-  background: transparent !important;
-}
-.cid-rFbEl7e6kK .mbr-gallery-item > div:hover:before {
-  opacity: 0.7 !important;
-}
-.cid-rFbEl7e6kK .mbr-gallery-title {
-  font-size: .9em;
-  position: absolute;
-  display: block;
-  width: 100%;
-  bottom: 0;
-  padding: 1rem;
-  color: #fff;
-  z-index: 2;
-}
-.cid-rFbEl7e6kK .mbr-gallery-title:before {
-  content: " ";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  position: absolute;
-  background: #554346 !important;
-  opacity: 0.7;
-  -webkit-transition: 0.2s background ease-in-out;
-  transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
 }
 .cid-rzHPILNLCS {
   padding-top: 90px;
