create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1752,8 +1752,67 @@ body {
   font-size: 96px;
   color: #149dcc;
 }
-#instagram-feed-block-1b .inst__title {
-  color: #d93f1d;
+.cid-rFbQp1WTC8 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-rFbQp1WTC8 .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-rFbQp1WTC8 .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-rFbQp1WTC8 .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-rFbQp1WTC8 .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-rFbQp1WTC8 .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #554346;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-rFbQp1WTC8 .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-rFbQp1WTC8 .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-rFbQp1WTC8 .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-rFbQp1WTC8 .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
 }
 .cid-rzHmhKDChg {
   padding-top: 90px;
@@ -1786,6 +1845,9 @@ body {
 }
 .cid-rzHPILNLCS textarea.form-control {
   min-height: 188px;
+}
+#instagram-feed-block-1b .inst__title {
+  color: #d93f1d;
 }
 .cid-rzHUJPrJPo {
   padding-top: 60px;
